--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "sv-test",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release": "standard-version"
+    "release": "standard-version --skip.bump",
+    "release:pre": "standard-version"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,10 @@
   "homepage": "https://github.com/Youmenomi/sv-test#readme",
   "devDependencies": {
     "standard-version": "^7.0.0"
+  },
+  "dependencies": {
+    "commander": "^4.0.1",
+    "conventional-recommended-bump": "^6.0.4",
+    "parse-git-config": "^3.0.0"
   }
 }
