--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "standard-version --skip.bump",
-    "release:pre": "standard-version"
+    "release:pre": "standard-version",
+    "releaseit": "release-it"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/Youmenomi/sv-test#readme",
   "devDependencies": {
+    "release-it": "^12.4.3",
     "standard-version": "^7.0.0"
   },
   "dependencies": {
