--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "sv-test",
-  "version": "1.2.0-alpha.0",
+  "version": "1.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "standard-version --skip.bump",
     "release:pre": "standard-version",
-    "releaseit": "release-it"
+    "releaseit": "release-it",
+    "np": "np"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   "dependencies": {
     "commander": "^4.0.1",
     "conventional-recommended-bump": "^6.0.4",
+    "np": "^5.1.3",
     "parse-git-config": "^3.0.0",
     "simple-git": "^1.126.0"
   }
