--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sv-test",
-  "version": "1.2.2-beta.4",
+  "version": "1.2.2-alpha.0",
   "description": "",
   "main": "index.js",
   "scripts": {
